--- a/PyExtractor/templates/explore.html
+++ b/PyExtractor/templates/explore.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>PyExtractor</title>
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+{% extends "base.html" %}
+{% load app_filters %}
+{% block title %}Manage Users{% endblock %}
+{% block sidebar_explore %}active{% endblock %}
+{% block body_header %}
+    Explore
+    <br>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+{% endblock %}
+{% block body %}
 
-</head>
-<body>
-<h1>Explore</h1>
 <form class="form-horizontal" method="post" enctype="multipart/form-data">{% csrf_token %}
 {% for field in form %}
     <div class="form-group">
@@ -18,8 +16,8 @@
         <div class="col-sm-10">{{ field }}</div>
     </div>
 {% endfor %}
+<div class="" style="text-align: center;">
 <button class="btn btn-primary">{{ form_button }}</button>
+</div>
 </form>
-
-</body>
-</html>
+{% endblock %}
