--- a/PyExtractor/templates/base.html
+++ b/PyExtractor/templates/base.html
@@ -19,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.8.2/fullcalendar.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/upload.js"></script> -->
 </head>
 <body>
     <nav class="navbar navbar-default navbar-static-top">
@@ -30,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/{% block brand_link %}profile/{% endblock %}"><i class="fa fa-hospital-o"></i>  PyExtractor</a>
+                <a class="navbar-brand" href="/{% block brand_link %}profile/{% endblock %}"><i class="fa fa-file-text"></i>  PyExtractor</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -70,8 +71,8 @@
                 <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         {% if user.account.role >= 0 %}
-                            <li class="{% block sidebar_upload %}{% endblock %}"><a href="/upload/">Upload<i class="pull-right fa fa-user"></i></a></li>
-                            <li class="{% block sidebar_explore %}{% endblock %}"><a href="/explore/">Explore<i class="pull-right fa fa-envelope"></i></a></li>
+                            <li class="{% block sidebar_upload %}{% endblock %}"><a href="/upload/">Upload<i class="pull-right fa fa-upload"></i></a></li>
+                            <li class="{% block sidebar_explore %}{% endblock %}"><a href="/explore/">Explore<i class="pull-right fa fa-binoculars"></i></a></li>
                         {% endif %}
                         {% if user.account.role == 60 %}
                             <li class="{% block sidebar_admin_users %}{% endblock %}"><a href="/admin/users">Manage Users<i class="pull-right fa fa-user"></i></a></li>
