--- a/PyExtractor/templates/upload.html
+++ b/PyExtractor/templates/upload.html
@@ -1,109 +1,28 @@
+{% extends "base.html" %}
+{% load app_filters %}
+{% block title %}Upload{% endblock %}
+{% block sidebar_upload %}active{% endblock %}
+{% block body_header %}
+    Upload
+    <br>
 
-{% load static %}
+{% endblock %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Py Extractor</title>
+{% block body %}
 
-	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-	<link rel="stylesheet" href="/static/css/upload.css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<form class="form-horizontal" method="post" enctype="multipart/form-data">{% csrf_token %}
+{% for field in form %}
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="">{{ field.label }}</label>
+        <div class="col-sm-10">{{ field }}</div>
+    </div>
+{% endfor %}
+<div class="" style="text-align: center;">
+<button class="btn btn-primary">{{ form_button }}</button>
+</div>
+</form>
 
-
-
-
-	
-	<!-- jQuery -->
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		
-	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" type="text/javascript"></script>
-	<script src="/static/js/particle.js" defer="defer"></script>
-
-	<!-- JavaScript -->
-	<script src="/static/js/upload.js" type="text/javascript"></script>
-	<!-- Compiled and minified JavaScript -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-
-
-</head>
-<body>
-	
-	<nav>
-		<div class="nav-wrapper">
-			<a href="#" class="brand-logo">Py Extractor</a>
-		</div>
-	</nav>
-
-	<div class="container">
-
-		<!--  Select department  -->
-		<div class="input-field col s12">
-			<select class="red ">
-				<option value="" disabled selected>Choose Department</option>
-			</select>
-		</div>
-
-		<!-- Select File -->
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-				<div class = "file-field input-field">
-					<div class = "btn">
-						<span>Browse</span>
-						<input type = "file" name="zip"/>
-					</div>
-					<div class = "file-path-wrapper">
-						<input class = "file-path validate" type = "text"
-						placeholder = "Upload file" />
-					</div>
-        </div>
-        <!-- Upload -->
-	    	<!-- <a type="submit" class="btn-floating btn-large waves-effect waves-light red" id="upload">
-        <i class="material-icons">file_upload</i></a> -->
-        <button type="submit" class="btn btn-sm btn-primary" id="js-upload-submit">Upload files</button>
-		</form>
-
-		
-		<div id="particles-js"></div>
-	</div>
-
-
-
-<!-- 
-{% block content %}
-
-<div class="container">
-      <div class="panel panel-default">
-        <div class="panel-heading"><strong>Upload</strong> <small></small></div>
-        <div class="panel-body">
-
-		  <h4>Browse for File </h4>
-		  
-        <form method="post" enctype="multipart/form-data" id="js-upload-form">
-        {% csrf_token %}
-          <div class="form-inline">
-            <div class="form-group">
-              <input type="file" name="zip" id="js-upload-files">
-            </div>
-            <button type="submit" class="btn btn-sm btn-primary" id="js-upload-submit">Upload files</button>
-          </div>
-		  </form>
-		  
-             {% if uploaded_file_url %}
-                 <hr>
-                <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-                  <img alt="Equation" src="{{ uploaded_file_url }}" width="30%">
-			  {% endif %}
-			  
-        </div>
-      </div>
-	</div>
-	  /container 
-
-
- {% endblock %} -->
-
-
-</body>
-</html>
+<script type="text/javascript">
+	$('input[type=file]')[0].name="zip";
+</script>
+{% endblock %}
