--- a/PyExtractor/templates/base.html
+++ b/PyExtractor/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.8.2/fullcalendar.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/rangeslider.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
@@ -19,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.8.2/fullcalendar.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
-    <!-- <script type="text/javascript" src="../static/js/upload.js"></script> -->
+    <script type="text/javascript" src="/static/js/rangeslider.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-static-top">
@@ -71,8 +72,8 @@
                 <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         {% if user.account.role >= 0 %}
-                            <li class="{% block sidebar_upload %}{% endblock %}"><a href="/upload/">Upload<i class="pull-right fa fa-upload"></i></a></li>
                             <li class="{% block sidebar_explore %}{% endblock %}"><a href="/explore/">Explore<i class="pull-right fa fa-binoculars"></i></a></li>
+                            <li class="{% block sidebar_upload %}{% endblock %}"><a href="/upload/">Upload<i class="pull-right fa fa-upload"></i></a></li>
                         {% endif %}
                         {% if user.account.role == 60 %}
                             <li class="{% block sidebar_admin_users %}{% endblock %}"><a href="/admin/users">Manage Users<i class="pull-right fa fa-user"></i></a></li>
