Query done right

--- a/PyExtractor/templates/explore.html
+++ b/PyExtractor/templates/explore.html
@@ -23,4 +23,26 @@
 	<button class="btn btn-primary">{{ form_button }}</button>
 </div>
 </form>
+
+<table id="datatable" class="table table-hover table-striped table-bordered">
+	<thead>
+		<th>Name</th>
+		<th>Extracted Text</th>
+		<th>Latitude</th>
+		<th>Longitude</th>
+	</thead>
+	<tbody>
+		{% for image in query %}
+		<tr>
+			<td>{{ image.img_name }}</td>
+			<td>{{ image.extracted_text }}</td>
+			<td>{{ image.latitude }}</td>
+			<td>{{ image.longitude }}</td>
+		</tr>
+		{% endfor %}
+	</tbody>
+</table>
+<script type="text/javascript">
+	$('#datatable').DataTable()
+</script>
 {% endblock %}
