--- a/PyExtractor/templates/singleform.html
+++ b/PyExtractor/templates/singleform.html
@@ -27,7 +27,9 @@
             </div>
         </div>
     {% endfor %}
-    <input class="btn btn-primary col-sm-12" type="submit" value="{{ form_button }}" />
+    <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; align-content: center;">
+    <input class="btn btn-primary col-sm-3" type="submit" value="{{ form_button }}"  />
+</div>
 </form>
 <script type="text/javascript">
     $(function () {
