--- a/PyExtractor/templates/explore.html
+++ b/PyExtractor/templates/explore.html
@@ -56,6 +56,7 @@
 		<th>Extracted Text</th>
 		<th>Latitude</th>
 		<th>Longitude</th>
+		<th>Image</th>
 	</thead>
 	<tbody>
 		{% for image in query %}
@@ -64,11 +65,34 @@
 			<td>{{ image.extracted_text }}</td>
 			<td>{{ image.latitude }}</td>
 			<td>{{ image.longitude }}</td>
+			<script type="text/javascript">
+                function proxy1{{ image.pk }}() {
+                    configureModal1(
+                            {{ image.pk }},
+                            '{{ image.img_path }}',
+                        )
+                };
+            </script>
+			<td><button onclick="proxy1{{ image.pk }}()" type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#image-modal">View Image</button></td>
 		</tr>
 		{% endfor %}
 	</tbody>
 </table>
+{% include "image_modal.html" %}
 <script type="text/javascript">
-	$('#datatable').DataTable()
+	$('#datatable').DataTable();
+
+	function configureModal1(pk, img_path) {
+     		var x = document.getElementById("omkar");
+     		if(x != null) 
+     		document.getElementById('image-modal-body').removeChild(x);
+     		var element = document.createElement("img");
+     		element.setAttribute("src","../" + img_path);
+     		element.setAttribute("width",400);
+     		element.setAttribute("height",400);
+     		element.setAttribute("id","omkar");
+            document.getElementById('image-modal-body').appendChild(element); 
+            //document.getElementById('image-modal-hidden').value = pk;
+        }
 </script>
 {% endblock %}
