--- a/PyExtractor/templates/index.html
+++ b/PyExtractor/templates/index.html
@@ -18,23 +18,21 @@
 				<a href="/login" class="btn-large waves-effect waves-light white" style="color:black"><b>LOGIN</b></a>
 			{% endif %}
 		</div>
-		<div class="carousel-fixed-item white-text" href="" id="title">
+		<div class="carousel-fixed-item white-text" id="title">
 			<h2>PyExtractor</h2>
 			<p class="white-text"></p>
 		</div>
-		<div class="carousel-item  white-text" href="#two!" style="background-color:#193666">
-		<!-- style="background-image:url(https://media.giphy.com/media/l46Cy1rHbQ92uuLXa/giphy.gif); background-size:cover;background-position: center center; background-repeat: no-repeat;"> -->
-			<h2>Reliable</h2>
-			<p class="white-text">This is your second panel</p>
+		<div class="carousel-item  white-text" style="background-color:#193666">
+			<h2 style="font-size: 40px;">Offline</h2>
+			<p class="white-text" style="font-size: 26px;">Entire PyExtractor platform can be run independently without any external dependicies</p>
 		</div>
-		<div class="carousel-item green white-text" href="#three!"
-		>
-			<h2>Offline</h2>
-			<p class="white-text">This is your third panel</p>
+		<div class="carousel-item green white-text">
+			<h2 style="font-size: 40px;">Transparent</h2>
+			<p class="white-text" style="font-size: 26px;">This platform makes the details about the Government assets more transparent and accessible</p>
 		</div>
-		<div class="carousel-item teal lighten-2 white-text" href="#four!">
-			<h2>Class Apart</h2>
-			<p class="white-text">This is your fourth panel</p>
+		<div class="carousel-item teal lighten-2 white-text">
+			<h2 style="font-size: 40px;">Accountable</h2>
+			<p class="white-text" style="font-size: 26px;">Publicly accessible records will make the agencies more accountable for their respective assets</p>
 		</div>
 	</div>
 	<!-- <hr> -->
