--- a/PyExtractor/templates/index.html
+++ b/PyExtractor/templates/index.html
@@ -7,8 +7,27 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 	<link rel="stylesheet" href="/static/css/main.css">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.1.0/particles.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" type="text/javascript"></script>
+
+	<style>
+
+#particles-js, #particles-js > canvas {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	background-image: url("");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 50% 50%;
+}
+	</style>
 </head>
 <body unselectable="on" onselectstart="return false;" onmousedown="return false">
+		<div id="particles-js">
+			</div>
+
 	<div class="carousel carousel-slider center">
 		<div class="carousel-fixed-item center">
 			{% if user|isAuthenticated %}
@@ -22,15 +41,15 @@
 			<h2>PyExtractor</h2>
 			<p class="white-text"></p>
 		</div>
-		<div class="carousel-item  white-text" style="background-color:#193666">
+		<div class="carousel-item  white-text">
 			<h2 style="font-size: 40px;">Offline</h2>
 			<p class="white-text" style="font-size: 26px;">Entire PyExtractor platform can be run independently without any external dependicies</p>
 		</div>
-		<div class="carousel-item green white-text">
+		<div class="carousel-item white-text">
 			<h2 style="font-size: 40px;">Transparent</h2>
 			<p class="white-text" style="font-size: 26px;">This platform makes the details about the Government assets more transparent and accessible</p>
 		</div>
-		<div class="carousel-item teal lighten-2 white-text">
+		<div class="carousel-item  white-text">
 			<h2 style="font-size: 40px;">Accountable</h2>
 			<p class="white-text" style="font-size: 26px;">Publicly accessible records will make the agencies more accountable for their respective assets</p>
 		</div>
@@ -42,7 +61,10 @@
 				<div class="col l5 s12">
 					<img width ="130px" src="/static/images/isro.png"/>
 				</div>
-				<div class="col l3 s12">
+				<div class="col l5 s12">
+						<img width ="100px" src="/static/images/sih.png"/>
+					</div>
+				<!-- <div class="col l3 s12">
 					<h5 class="white-text">Usage</h5>
 					<ul>
 						{% if user|isAuthenticated %}
@@ -52,12 +74,12 @@
 							<li><a class="grey-text text-lighten-3" href="/login">Login</a></li>
 						{% endif %}
 					</ul>
-				</div>
+				</div> -->
 				<div class="col l2 s12">
 					<h5 class="white-text">Documentation</h5>
 					<ul>
-						<li><a class="grey-text text-lighten-3" href="#!">Installation</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Running</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Install</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Usage</a></li>
 					</ul>
 				</div> 	 	 	
 			</div>
@@ -76,4 +98,9 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 </body>
+<script type="text/javascript">
+	particlesJS.load('particles-js', './static/particles.json', function() {
+		console.log('particles.json config loaded');
+	});
+</script>
 </html>
